force-app/main/default/objects/Record_Processing__c/Record_Processing__c.object-meta.xml
<CustomObject>
    <label>Record Processing</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Processing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Processings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>