force-app/main/default/objects/Record_Processing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sync Operations in Review Process</relationshipLabel>
    <relationshipName>Record_Processings</relationshipName>
    <type>Lookup</type>
</CustomField>