force-app/main/default/objects/Record_Processing__c/fields/Bill_Group__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Group</label>
    <referenceTo>Bill_Group__c</referenceTo>
    <relationshipLabel>Sync Operations in Review Process</relationshipLabel>
    <relationshipName>Record_Processings</relationshipName>
    <type>Lookup</type>
</CustomField>