force-app/main/default/objects/Record_Processing__c/fields/Deleted_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Record_ID__c</fullName>
    <description>track this for delete operation</description>
    <inlineHelpText>track this for delete operation</inlineHelpText>
    <label>Deleted Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>