force-app/main/default/objects/Record_Processing__c/fields/Error_Length__c.field-meta.xml
<CustomField>
    <fullName>Error_Length__c</fullName>
    <formula>TEXT(LEN(Field_Error_1__c) + LEN(Field_Error_2__c) + LEN(Field_Error_3__c) + LEN(Field_Error_4__c) + LEN(Field_Error_5__c) + LEN(Field_Error_6__c) + LEN(Field_Error_7__c) + LEN(Field_Error_8__c) + LEN(Field_Error_9__c) + LEN(Field_Error_10__c))</formula>
    <label>Error Length</label>
    <type>Text</type>
</CustomField>