force-app/main/default/objects/Record_Processing__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>if Safari, this will have the database name and then the ID, regardless of what object it came from</description>
    <externalId>true</externalId>
    <inlineHelpText>if Safari, this will have the database name and then the ID, regardless of what object it came from</inlineHelpText>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>