force-app/main/default/objects/Record_Processing__c/fields/External_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Formula__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, External_ID__c ) = 0
  , NULL
  , MID( External_ID__c , FIND(&#39;-&#39;, External_ID__c ) + 1, LEN( External_ID__c ) - FIND(&#39;-&#39;, External_ID__c ) + 1) 
)</formula>
    <label>External ID Formula</label>
    <type>Text</type>
</CustomField>