force-app/main/default/objects/Record_Processing__c/fields/Field_Error_11__c.field-meta.xml
<CustomField>
    <fullName>Field_Error_11__c</fullName>
    <label>Field Error 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>