force-app/main/default/objects/Record_Processing__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Bill_Group__c</fullName>
            </value>
            <value>
                <fullName>Premises__c</fullName>
            </value>
            <value>
                <fullName>Premise_Status__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>