force-app/main/default/objects/Record_Processing__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Sync Operations in Review Process</relationshipLabel>
    <relationshipName>Record_Processings</relationshipName>
    <type>Lookup</type>
</CustomField>