force-app/main/default/objects/Record_Processing__c/fields/Premise_Status__c.field-meta.xml
<CustomField>
    <fullName>Premise_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise Status</label>
    <referenceTo>Premise_Status__c</referenceTo>
    <relationshipLabel>Record Processings</relationshipLabel>
    <relationshipName>Record_Processings</relationshipName>
    <type>Lookup</type>
</CustomField>