force-app/main/default/objects/Record_Processing__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informatica review task ran and no errors were found</description>
    <inlineHelpText>Informatica review task ran and no errors were found</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>