force-app/main/default/objects/Record_Processing__c/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informatica review task ran successfully</description>
    <inlineHelpText>Informatica review task ran successfully</inlineHelpText>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>