force-app/main/default/objects/Record_Processing__c/fields/Sync_Ran__c.field-meta.xml
<CustomField>
    <fullName>Sync_Ran__c</fullName>
    <defaultValue>false</defaultValue>
    <description>did the update sync job for the related record run yet?</description>
    <inlineHelpText>did the update sync job for the related record run yet?</inlineHelpText>
    <label>Sync Ran</label>
    <type>Checkbox</type>
</CustomField>