force-app/main/default/objects/Record_Processing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Type__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Sync_Ran__c</columns>
    <columns>Reviewed__c</columns>
    <columns>Error_Length__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>