force-app/main/default/objects/Record_Processing__c/listViews/Premise_Updates_with_Errors.listView-meta.xml
<ListView>
    <fullName>Premise_Updates_with_Errors</fullName>
    <columns>NAME</columns>
    <columns>Premise__c</columns>
    <columns>External_ID__c</columns>
    <columns>Sync_Ran__c</columns>
    <columns>Reviewed__c</columns>
    <columns>Error_Length__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Premise__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Operation_Type__c</field>
        <operation>equals</operation>
        <value>Update</value>
    </filters>
    <filters>
        <field>Error_Length__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Premise Updates with Errors</label>
    <language>en_US</language>
</ListView>